Added static version of admin-container

--- a/src/components/menubasket/menubasket.css
+++ b/src/components/menubasket/menubasket.css
@@ -1,8 +1,14 @@
 .menubasket-container{
   display: flex;
   justify-content:center;
+  flex-direction: column;
+  align-items: center;
 }
 .menubasket-logo-container{
   display:flex;
   align-items: center;
+}
+.menubasket-container div:nth-child(2){
+  display: flex;
+  justify-content:center;
 }
