Added static version of showproducts

--- a/src/components/showproducts/showproducts.css
+++ b/src/components/showproducts/showproducts.css
@@ -1,6 +1,5 @@
-.products-container{
+.showproducts-container{
   display: flex;
-  justify-content: center;
   flex-direction: column;
   align-items: center;
 }
