--- a/src/components/menu/menu.css
+++ b/src/components/menu/menu.css
@@ -1,13 +1,34 @@
 .menu-container{
+  position: sticky;
+  width: 100%;
+  top: 0px;
+  background-color: #fff;
+  z-index: 1;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
+  justify-content: space-between;
+  align-content: center;
+
+  box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.2);
+}
+.menu-container>*{
+  margin: 1rem;
+}
+.menubasket-adminlogin-holder{
+  width: 50%;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  align-content: center;
+}
+.adminlogin:hover{
+  cursor: pointer;
+}
+.menubasket-adminlogin-holder>p{
+  margin-left: 2rem;
 }
 
-.menu-container div:nth-child(2){
-  display: flex;
-  align-items: center;
-}
-.menu-container div:nth-child(2) div{
-  border: 1px solid red;
+.menu-container>img{
+    width: 100px
 }
