--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,18 @@
-body {
+body,  body *{
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+   -moz-box-sizing: border-box;
+   box-sizing: border-box;
+}
+body{
+  height: 130vh;
+}
+
+h1,h2,h3{
+  font-family: Verdana, Geneva, sans-serif;
+  color:#232323;
+}
+p{
+  font-family: arial,sans-serif;
 }
