--- a/src/containers/admin/admin.css
+++ b/src/containers/admin/admin.css
@@ -1,4 +1,105 @@
 .admin-container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    width: 100%;
+    background-color: #f4f4f4;
+
+}
+.admin-container>h1{
+  width: 80%;
+  color: #606060;
+  font-weight: lighter;
+  min-width: 320px;
+  border-bottom: 1px solid #606060;
+  padding: 0.5rem;
+  margin: 1rem 0;
+}
+
+.admin-container>.admin-button-container{
+  width: 80%;
+  min-width: 320px;
+  margin: 1rem 0;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
+}
+.admin-container>.admin-button-container>button{
+  width: 50%;
+  border: none;
+  background-color: #909090;
+  padding: 0.5rem;
+  color: #fff;
+  font-weight: bold;
+  /* border-radius: 5px 0 0 5px */
+}
+.admin-button-container>button:first-child{
+  border-radius: 5px 0 0 5px;
+}
+.admin-button-container>button:last-child{
+  border-radius: 0 5px 5px 0;
+}
+.admin-container>.admin-button-container>.admin-chosen-category{
+  background-color: #606060;
+}
+
+
+
+.admin-products-container{
+  width: 80%;
+  min-width: 320px;
+  background-color: #fff;
+  padding: 1rem;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  margin-bottom: 3rem;
+}
+
+.admin-instore{
+  width: 90%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  border-bottom: 1px solid #707070;
+  padding: 0 0.5rem;
+}
+
+.admin-article-object{
+  display: flex;
+  flex-direction: column;
+  margin-top: 1rem;
+  width: 90%;
+  padding: 0 0.5rem;
+
+  border-bottom: 1px solid #606060;
+  padding-bottom: 0.5rem;
+}
+
+.id-changeButton{
+  display: flex;
+  justify-content: space-between;
+}
+
+.admin-product-img-container{
+  width: 70px;
+}
+
+.admin-product-img-container>img{
+  width: 100%;
+}
+
+
+.img-info-instore-price-status{
+  display: flex;
+  align-items: center;
+  align-content: center;
+  justify-content: space-between;
+}
+
+
+.img-info-instore-price-status>.info-container{
+  border-right: 1px solid #606060;
+  padding: 0 0.5rem;
 }
