--- a/src/components/showproducts/showproducts.css
+++ b/src/components/showproducts/showproducts.css
@@ -80,3 +80,7 @@
   color: white;
   border-radius: 5px;
 }
+
+.showproducts-container .wrapper-products li div:nth-child(3) button:disabled{
+  background-color: red;
+}
