--- a/src/components/showproducts/showproducts.css
+++ b/src/components/showproducts/showproducts.css
@@ -11,7 +11,7 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  background-color: snow;
+  background-color: #f4f4f4;
 }
 
 .showproducts-container .wrapper-products li {
