--- a/src/containers/admin/admin.css
+++ b/src/containers/admin/admin.css
@@ -119,7 +119,7 @@
 
 .main-content .img-name-instore{
   display: flex;
-  width: 40%;
+  width: 50%;
 }
 
 .main-content .img-name-instore>div:last-child{
@@ -133,7 +133,9 @@
 .main-content .img-name-instore .isInStore{
   color: green;
 }
-
+.main-content .img-name-instore .notInStore{
+  color: red;
+}
 .main-content .img-container{
   width: 70px;
   min-width: 70px;
@@ -147,7 +149,8 @@
   color: #606060;
   font-size: 1,1rem;
 }
-.main-content .isInStore{
+.main-content .isInStore,
+.main-content .notInStore{
   border-top: 2px solid #f4f4f4;
   margin-top: 0.5rem;
   padding-top: 0.5rem;
@@ -155,7 +158,7 @@
 
 
 .main-content .admin-amount{
-  width: 30%;
+  width: 25%;
   min-width: 100px;
   display: flex;
   flex-direction: column;
@@ -185,9 +188,13 @@
 .main-content .img-name-instore textarea{
   resize: none;
 }
+
+.main-content .img-name-instore textarea{
+  resize: none;
+}
 /**/
 .main-content .admin-price{
-  width: 30%;
+  width: 25%;
   min-width: 100px;
   display: flex;
   flex-direction: column;
@@ -195,107 +202,6 @@
   align-content: center;
 }
 
-
-/*.img-info-product-container{
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  align-content: center;
-  width: 30%;
-  min-width: 150px;
-}
-.admin-product-img-container{
-  width: 70px;
-  min-width: 70px;
-  max-width: 70px;
-}
-
-.admin-product-img-container>img{
-  width: 100%;
-
-}
-
-
-
-
-.img-info-instore-price-status{
-  display: flex;
-  align-items: center;
-  align-content: center;
-  justify-content: space-between;
-  margin-top: 1rem;
-}
-
-.img-info-instore-price-status .antal-price{
-  display: flex;
-  align-items: center;
-  align-content: center;
-  justify-content: space-between;
-  width: 30%;
-  min-width: 150px;
-  margin: 0 1rem;
-
-}
-.img-info-instore-price-status .antal-price>div{
-  text-align: center;
-}
-.img-info-instore-price-status .mini-header{
-  margin-bottom: 1rem;
-  color: #606060;
-
-}
-.img-info-instore-price-status .antal-price>div:first-child{
-  margin-right: 1rem;
-}
-
-.img-info-instore-price-status .status{
-    margin-left: 1rem;
-   width: 20%;
-   min-width: 120px;
-}
-
-
-
-.admin-change-article-object{
-  display: flex;
-  flex-direction: column;
-  margin-top: 1rem;
-  width: 90%;
-  height: 300px;
-  padding: 0 0.5rem;
-
-  border-bottom: 1px solid #606060;
-  padding-bottom: 0.5rem;
-}
-.change-img-info-instore-price-status{
-  display: flex;
-  align-items: center;
-  align-content: center;
-  justify-content: space-between;
-}
-.change-img-info-instore-price-status>div{
-  width: 25%;
-}
-.admin-change-product-img-container{
-  width: 70px;
-  min-width: 70px;
-  max-width: 70px;
-
-}
-.admin-change-product-img-container>img{
-  width: 100%;
-}
-.admin-change-article-object .change-img-info-product-container{
-  display: flex;
-  width: 50%;
-  justify-content: flex;
-}
-.change-img-info-instore-price-status .change-antal-price{
-  display: flex;
-  flex-direction: column;
-}
-
-*/
 
 @media all and (max-width: 800px) {
 
@@ -332,6 +238,19 @@
     flex-direction: row;
     justify-content: space-between;
   }
+
+  .main-content .mobile{
+    width: 100%;
+    flex-direction: column;
+    align-content: flex-start;
+    align-items: flex-start;
+  }
+  .main-content .changeUrl{
+    width: 100%;
+  }
+  .main-content .img-name-instore div.textAreaContainer{
+      margin: 0;
+    }
   .main-content .admin-amount,
   .main-content .admin-price{
     align-content:flex-start;
@@ -341,41 +260,4 @@
   .main-content .admin-price>p:last-child{
     padding-right: 1rem;
   }
-/*
-  .img-info-instore-price-status{
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    align-content: flex-start;
-  }
-  .img-info-instore-price-status .antal-price,
-  .img-info-instore-price-status .status,
-  .img-info-instore-price-status .img-info-product-container{
-    margin: 0;
-    margin-bottom: 1rem;
-    border-bottom: 1px solid #808080;
-    width: 100%;
-  }
-  .img-info-instore-price-status .antal-price{
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    align-content: flex-start;
-    justify-content: flex-start;
-  }
-  .img-info-instore-price-status .antal-price>div>p{
-    text-align: left;
-  }
-  .img-info-instore-price-status .antal-price>div:first-child{
-      width: 100%;
-      margin-bottom: 1rem;
-      border-bottom: 1px solid #808080;
-  }
-  .img-info-product-container{
-    justify-content: flex-start;
-  }
-
-  .main-content{
-    border: none;
-  }*/
 }
