removed warnings and console logs

--- a/src/index.css
+++ b/src/index.css
@@ -18,3 +18,9 @@ h1, h2, h3 {
 p, span {
   font-family: 'Open Sans', sans-serif;
 }
+
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
