--- a/src/components/showproducts/showproducts.css
+++ b/src/components/showproducts/showproducts.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  background-color: #f4f4f4;
 }
 .showproducts-container button:hover {
   cursor: pointer;
@@ -12,6 +13,8 @@
   flex-wrap: wrap;
   justify-content: center;
   background-color: #f4f4f4;
+  margin: 50px;
+
 }
 
 .showproducts-container .wrapper-products li {
