--- a/src/containers/admin/admin.css
+++ b/src/containers/admin/admin.css
@@ -1,9 +1,8 @@
 .admin-container{
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
-
+    min-height: 92.5vh;
     width: 100%;
     background-color: #f4f4f4;
 
